--- a/.github/workflows/playwright-reusable.yml
+++ b/.github/workflows/playwright-reusable.yml
@@ -19,6 +19,7 @@ jobs:
     timeout-minutes: ${{ inputs.timeout-minutes }}
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         database: [postgres, mongo, sqlite]
     steps:
@@ -50,7 +51,19 @@ jobs:
         cat docker-compose.test.${{ matrix.database }}.yml
 
     - name: Start services
-      run: docker compose -f docker-compose.test.${{ matrix.database }}.yml up -d
+      run: |
+        if ! docker compose -f docker-compose.test.${{ matrix.database }}.yml up -d; then
+          echo "=== Service startup failed! Showing container logs ==="
+          docker compose -f docker-compose.test.${{ matrix.database }}.yml ps
+          echo "=== Container Logs ==="
+          docker compose -f docker-compose.test.${{ matrix.database }}.yml logs
+          echo "=== Individual Service Logs ==="
+          docker compose -f docker-compose.test.${{ matrix.database }}.yml logs migrate || echo "No migrate service logs"
+          docker compose -f docker-compose.test.${{ matrix.database }}.yml logs server || echo "No server service logs"
+          docker compose -f docker-compose.test.${{ matrix.database }}.yml logs web || echo "No web service logs"
+          docker compose -f docker-compose.test.${{ matrix.database }}.yml logs gateway || echo "No gateway service logs"
+          exit 1
+        fi
 
     - name: Show container logs
       run: |
@@ -99,5 +112,181 @@ jobs:
       if: ${{ !cancelled() }}
       with:
         name: playwright-report-${{ matrix.database }}-${{ inputs.container-tag }}
+        path: playwright-report/
+        retention-days: 30
+
+  playwright-tests-bundle:
+    timeout-minutes: ${{ inputs.timeout-minutes }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        database: [sqlite, mongo, postgres]
+    steps:
+    # prepare environment and dependencies
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    - name: Install dependencies
+      run: npm install -g pnpm && pnpm install
+    - name: Install Playwright Browsers
+      run: pnpm exec playwright install --with-deps
+
+    # prepare data directories
+    - name: Create data directories
+      run: |
+        mkdir -p ./test-data/${{ matrix.database }}
+        case "${{ matrix.database }}" in
+          sqlite)
+            # SQLite data directory
+            mkdir -p ./test-data/sqlite/app
+            ;;
+          mongo)
+            # MongoDB data directory
+            mkdir -p ./test-data/mongo/db
+            ;;
+          postgres)
+            # PostgreSQL data directory
+            mkdir -p ./test-data/postgres/data
+            ;;
+        esac
+
+    - name: Check bundle image availability and determine tag
+      id: bundle_tag
+      run: |
+        # Try to pull the specific tag first
+        BUNDLE_TAG="${{ inputs.container-tag }}"
+        IMAGE_NAME="ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-bundle-${{ matrix.database }}"
+
+        echo "Checking if ${IMAGE_NAME}:${BUNDLE_TAG} exists..."
+
+        if docker manifest inspect "${IMAGE_NAME}:${BUNDLE_TAG}" >/dev/null 2>&1; then
+          echo "✅ Found bundle image with tag: ${BUNDLE_TAG}"
+          echo "tag=${BUNDLE_TAG}" >> $GITHUB_OUTPUT
+        elif docker manifest inspect "${IMAGE_NAME}:latest" >/dev/null 2>&1; then
+          echo "⚠️  Specific tag not found, falling back to latest"
+          echo "tag=latest" >> $GITHUB_OUTPUT
+        else
+          echo "❌ No bundle image found for ${{ matrix.database }}"
+          echo "Available tags:"
+          docker search --limit 5 "${{ github.repository_owner }}/${{ github.event.repository.name }}-bundle-${{ matrix.database }}" || echo "No public images found"
+          exit 1
+        fi
+
+    - name: Start bundle container - ${{ matrix.database }}
+      run: |
+        BUNDLE_TAG="${{ steps.bundle_tag.outputs.tag }}"
+        echo "Starting bundle container with tag: ${BUNDLE_TAG}"
+
+        # Common environment variables for all database types
+        COMMON_ENV=(
+          -e ACCESS_TOKEN_SECRET_KEY=test-secret-key-for-playwright-tests
+          -e REFRESH_TOKEN_SECRET_KEY=test-secret-key-for-playwright-tests
+          -e CLIENT_URL=http://localhost:8383
+        )
+
+        case "${{ matrix.database }}" in
+          sqlite)
+            docker run -d \
+              --name peekaping-bundle-test-${{ matrix.database }} \
+              -p 8383:8383 \
+              -v $(pwd)/test-data/sqlite/app:/app/data \
+              "${COMMON_ENV[@]}" \
+              -e DB_NAME=/app/data/peekaping.db \
+              ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-bundle-${{ matrix.database }}:${BUNDLE_TAG}
+            ;;
+          mongo)
+            docker run -d \
+              --name peekaping-bundle-test-${{ matrix.database }} \
+              -p 8383:8383 \
+              -v $(pwd)/test-data/mongo/db:/data/db \
+              "${COMMON_ENV[@]}" \
+              -e DB_NAME=peekaping \
+              -e DB_USER=peekaping \
+              -e DB_PASS=password \
+              ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-bundle-${{ matrix.database }}:${BUNDLE_TAG}
+            ;;
+          postgres)
+            docker run -d \
+              --name peekaping-bundle-test-${{ matrix.database }} \
+              -p 8383:8383 \
+              -v $(pwd)/test-data/postgres/data:/var/lib/postgresql/data \
+              "${COMMON_ENV[@]}" \
+              -e DB_NAME=peekaping \
+              -e DB_USER=peekaping \
+              -e DB_PASS=password \
+              ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-bundle-${{ matrix.database }}:${BUNDLE_TAG}
+            ;;
+        esac
+
+    - name: Show container logs
+      run: |
+        echo "=== Container Status ==="
+        docker ps --filter "name=peekaping-bundle-test-${{ matrix.database }}"
+        echo "=== Container Logs ==="
+        docker logs peekaping-bundle-test-${{ matrix.database }}
+        echo "=== Container Environment ==="
+        docker exec peekaping-bundle-test-${{ matrix.database }} env | grep -E "(DB_|API_|JWT_|ACCESS_|REFRESH_|BUNDEBUG)" || echo "No relevant env vars found"
+        echo "=== Container Processes ==="
+        docker exec peekaping-bundle-test-${{ matrix.database }} ps aux || echo "Could not list processes"
+        echo "=== Testing internal connectivity ==="
+        docker exec peekaping-bundle-test-${{ matrix.database }} nc -zv localhost 8034 || echo "Go server not responding on port 8034"
+
+    - name: Wait for bundle service to be ready
+      run: |
+        echo "Waiting for bundle service to be healthy..."
+        timeout 120 bash -c '
+          attempt=1
+          until curl -f http://localhost:8383/api/v1/health; do
+            echo "Attempt $attempt: Health check failed, retrying in 5 seconds..."
+            response=$(curl -s http://localhost:8383/api/v1/health || echo "connection failed")
+            status_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8383/api/v1/health || echo "000")
+            echo "  Status Code: $status_code"
+            echo "  Response Body: $response"
+            attempt=$((attempt + 1))
+            sleep 5
+            if [ $attempt -gt 12 ]; then
+              echo "=== Container Status ==="
+              docker ps --filter "name=peekaping-bundle-test-${{ matrix.database }}"
+              echo "=== Container Logs ==="
+              docker logs peekaping-bundle-test-${{ matrix.database }}
+            fi
+          done
+        ' || echo "Health check timed out after 120 seconds"
+        echo "Health check succeeded! Waiting additional 5 seconds for stability..."
+        sleep 5
+
+    - name: Run Playwright tests against bundle
+      run: PLAYWRIGHT_BASE_URL=http://localhost:8383 pnpm exec playwright test
+
+    - name: Show final container logs on failure
+      if: failure()
+      run: |
+        echo "=== Final Container Status ==="
+        docker ps --filter "name=peekaping-bundle-test-${{ matrix.database }}"
+        echo "=== Final Container Logs ==="
+        docker logs peekaping-bundle-test-${{ matrix.database }}
+        echo "=== Final Container Environment ==="
+        docker exec peekaping-bundle-test-${{ matrix.database }} env | grep -E "(DB_|API_|JWT_|ACCESS_|REFRESH_|BUNDEBUG)" || echo "No relevant env vars found"
+        echo "=== Final Container Processes ==="
+        docker exec peekaping-bundle-test-${{ matrix.database }} ps aux || echo "Could not list processes"
+        echo "=== Final internal connectivity test ==="
+        docker exec peekaping-bundle-test-${{ matrix.database }} nc -zv localhost 8034 || echo "Go server not responding on port 8034"
+
+    - name: Stop bundle container
+      if: always()
+      run: |
+        docker stop peekaping-bundle-test-${{ matrix.database }} || true
+        docker rm peekaping-bundle-test-${{ matrix.database }} || true
+
+    - name: Cleanup test data
+      if: always()
+      run: sudo rm -rf ./test-data
+
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report-bundle-${{ matrix.database }}-${{ inputs.container-tag }}
         path: playwright-report/
         retention-days: 30
