chore: update Docker Compose files for MongoDB, PostgreSQL, and SQLite
- Added DB_PASS environment variable for MongoDB and PostgreSQL configurations to enhance security.
- Removed unused API_URL environment variable from all database configurations to streamline setup.
- Cleaned up commented-out volume configurations related to Caddy data persistence for clarity.

--- a/docker-compose.bundle.postgres.yml
+++ b/docker-compose.bundle.postgres.yml
@@ -11,16 +11,13 @@ services:
     environment:
       - DB_TYPE=postgres
       - DB_HOST=localhost
+      - DB_PASS=password
       - DB_PORT=5432
-      - API_URL=http://localhost:8383
     volumes:
       # Database data persistence
       - ./.data/postgres:/var/lib/postgresql/data
       # Application logs persistence
       - ./.data/logs:/var/log/supervisor
-      # Caddy data persistence (certificates, etc.)
-      - ./.data/caddy-data:/data/caddy
-      - ./.data/caddy-config:/config/caddy
       # Optional: Custom Caddyfile override
       # - ./custom-Caddyfile:/etc/caddy/Caddyfile:ro
     container_name: peekaping-bundle-postgres
