--- a/docker-compose.bundle.mongo.yml
+++ b/docker-compose.bundle.mongo.yml
@@ -11,16 +11,13 @@ services:
     environment:
       - DB_TYPE=mongo
       - DB_HOST=localhost
+      - DB_PASS=password
       - DB_PORT=27017
-      - API_URL=http://localhost:8383
     volumes:
       # Database data persistence
       - ./.data/mongodb:/data/db
       # Application logs persistence
       - ./.data/logs:/var/log/supervisor
-      # Caddy data persistence (certificates, etc.)
-      - ./.data/caddy-data:/data/caddy
-      - ./.data/caddy-config:/config/caddy
       # Optional: Custom Caddyfile override
       # - ./custom-Caddyfile:/etc/caddy/Caddyfile:ro
     container_name: peekaping-bundle-mongo
