fix: update regex for version extraction in CI workflows
- Modified the regex pattern in both `docker-release.yml` and `release-candidate.yml` to accommodate optional whitespace around the equals sign when updating the version in `version.go`, ensuring more robust version updates.

--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Update version in go files (server)
         run: |
-          sed -i.bak -E 's/(Version\s*=\s*")[^"]+(")/\1${{ github.event.inputs.version }}\2/' version.go
+          sed -i.bak -E 's/(Version[[:space:]]*=[[:space:]]*")[^"]+(")/\1${{ github.event.inputs.version }}\2/' version.go
           rm version.go.bak
         working-directory: ./apps/server/src/version
 
