--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Update version in main.go (server) - temp
         run: |
-          sed -i.bak -E 's/(Version\s*=\s*")[^"]+(")/\1${{ github.event.inputs.version }}\2/' version.go
+          sed -i.bak -E 's/(Version[[:space:]]*=[[:space:]]*")[^"]+(")/\1${{ github.event.inputs.version }}\2/' version.go
           rm version.go.bak
         working-directory: ./apps/server/src/version
 
@@ -227,7 +227,7 @@ jobs:
 
       - name: Update version in main.go (server) - temp
         run: |
-          sed -i.bak -E 's/(Version\s*=\s*")[^"]+(")/\1${{ github.event.inputs.version }}\2/' version.go
+          sed -i.bak -E 's/(Version[[:space:]]*=[[:space:]]*")[^"]+(")/\1${{ github.event.inputs.version }}\2/' version.go
           rm version.go.bak
         working-directory: ./apps/server/src/version
 
